--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
     "angular": "angularjs#^1.5.3",
     "jquery": "^2.2.3",
     "angular-ui-router": "^0.2.18",
-    "uploadify": "^3.2.1"
+    "angular-resource": "^1.4.0"
   }
 }
